--- a/doc/report.tex
+++ b/doc/report.tex
@@ -1,5 +1,29 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+
+\input{doc/vars.tex}
+\input{doc/format.tex}
 
 \begin{document}
-hej
+
+\subfile{doc/sections/cover}
+
+\clearpage
+\tableofcontents
+\vfill
+
+\clearpage
+\subfile{doc/sections/intro}
+\clearpage
+\subfile{doc/sections/literature}
+\clearpage
+\subfile{doc/sections/method}
+\clearpage
+\subfile{doc/sections/result}
+\clearpage
+\subfile{doc/sections/discussion}
+
+\clearpage
+\bibliography{doc/ref.bib}{}
+\bibliographystyle{plain}
+
 \end{document}
