remove student numbers

--- a/doc/sections/cover.tex
+++ b/doc/sections/cover.tex
@@ -29,13 +29,9 @@
         {\large \bfseries Authors}\\[1cm]
 
         \normalsize
-        \def\arraystretch{1.5}
-        \def\tabcolsep{1.5cm}
-        \begin{tabular}{lr}
-            {\sc \authorA} & \authorANum \\
-            {\sc \authorB} & \authorBNum \\
-            {\sc \authorC} & \authorCNum
-        \end{tabular}
+        {\sc \authorA}\\[3mm]
+        {\sc \authorB}\\[3mm]
+        {\sc \authorC}
     \end{center}
 \end{titlepage}
 
