--- a/doc/vars.tex
+++ b/doc/vars.tex
@@ -7,8 +7,5 @@
 \newcommand{\courseName}{Machine Vision and Digital Image Analysis}
 
 \newcommand{\authorA}{Noah Hellman}
-\newcommand{\authorANum}{TODO}
 \newcommand{\authorB}{Akif Nawaz}
-\newcommand{\authorBNum}{TODO}
-\newcommand{\authorC}{Tapio.Valikangas}
-\newcommand{\authorCNum}{TODO}
+\newcommand{\authorC}{Tapio Valikangas}
