--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -1,12 +1,21 @@
 \documentclass[doc/report.tex]{subfiles}
 
+% Introduce the topic, define a task, specify work division between project
+% members.
+
 \begin{document}
 
 \section{Introduction}
 % TODO
 
 \subsection{Task}
-% TODO
+The task to classify natural images of 8 different types of objects was given
+ot the project group. Each image contains one of the objects and should be
+classified as such. The 8 different possible objects are airplanes, cars, cats,
+dogs, flowers, fruits, motorbike and people. In order to implement and
+evauluate a classifier; a labeled dataset of 6899 images was given as well. The
+dataset was already split into training and test sets such that the test set
+consisted of one third of the images.
 
 \subsection{Work division}
 % TODO
