correct to unicode name

--- a/doc/vars.tex
+++ b/doc/vars.tex
@@ -8,4 +8,4 @@
 
 \newcommand{\authorA}{Noah Hellman}
 \newcommand{\authorB}{Akif Nawaz}
-\newcommand{\authorC}{Tapio Valikangas}
+\newcommand{\authorC}{Tapio Välikangas}
