change detection to recognition

--- a/doc/vars.tex
+++ b/doc/vars.tex
@@ -1,4 +1,4 @@
-\newcommand{\docTitle}{Object Detection in Natural Images}
+\newcommand{\docTitle}{Object Recognition in Natural Images}
 \newcommand{\docType}{Technical report}
 \newcommand{\docDate}{2020-04-07}
 
