--- a/doc/sections/intro.tex
+++ b/doc/sections/intro.tex
@@ -9,8 +9,8 @@
 % TODO
 
 \subsection{Task}
-The task to classify natural images of 8 different types of objects was given
-ot the project group. Each image contains one of the objects and should be
+The task of classifying natural images of 8 different types of objects was given
+to our project group. Each image contains one of the objects and should be
 classified as such. The 8 different possible objects are airplanes, cars, cats,
 dogs, flowers, fruits, motorbike and people. In order to implement and
 evauluate a classifier; a labeled dataset of 6899 images was given as well. The
