--- a/doc/sections/method.tex
+++ b/doc/sections/method.tex
@@ -49,7 +49,10 @@ variations of training samples to the training set using the
 MatLab function. Variations that were used was horizontal reflections and
 displacements in X and Y axes.
 
-\subsection{Feature Extraction}
+\subsection{Using Pre-Trained Network}
+\subsubsection{Feature Extraction from Pretrained Networks}
+By means of a pre-trained model that has been trained on similar datsets we can build a very accurate model without the hassle of the training the network in a timesaving manner. This is accomplished by extracting the image features from thetrainig set based on the patterns that have been learnt by these pre-trained network while solving a different problem rather than starting the learning process from scratch. This way, this method leverage previous learnings and avoid starting from scratch and saves time.  
+
 % TODO
 
 \subsubsection{Raw pixels}
@@ -91,8 +94,6 @@ A histogram of the features for each image was then created with the
 function for both the training set and the test set using the inital bag of
 features.
 
-\subsubsection{AlexNet Convolutional Neural Network (CNN)}
-%
 
 \subsection{Training Parameter Optimization}
 \subsubsection{Batch Size and Training Epochs Tradeoff}
@@ -181,8 +182,6 @@ information is also used as a feature. Use morphological operators and
 frequency transformations are possible solutions to create selector for the
 texture.
 
-\subsection{Architecture of CNN}
-% Will do it in some time
 
 \subsection{Self Organizing Map}
 The Self Organizing Map, SOM is a Neural Net model for dimension reduction.
