--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -4,7 +4,7 @@
 
 \section{Experiments and Results}
 % TODO
-\subsection{AlexNet Feature Extraction}
+\subsection{Feature Extraction from Pretrained AlexNet}
 Table 1 describes the performance of various classifers that were trained based on the features extracted from the last fully connected layer (FC8) of the AlexNet. Image Augmnetation techniques such as translation and rotation seemed to be having a negative impact on the perfromance of these classifers and hence were not included in the results.
 
 \begin{table}[]
@@ -23,7 +23,7 @@ Discriminant Analysis & 99.22\%  \\ \hline
 }
 \end{table}
 
-\subsection{Transfer Learning by retraining the Network}
+\subsection{Transfer Learning using AlexNet}
 The transfer learning model was trained over the training image datset using MATLAB 2018b on a Windows 10 Operating System on a single core i3 CPU with 8GB of RAM. While the initial results from the trained classier were promising, by means of training data augmentation and optimization of the training parameters we are able to acheive a very accurate classifier while also reducing the training time by half. Table 2 depicts the effect of training parameters on the classifeir performance. The choice of the optimization parameters and their corresponding effects have been described briefly in the follwoing sub-sections.
 
 \begin{table}[h]
