--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -12,14 +12,24 @@ Table 1 describes the performance of various classifers that were trained based 
 \caption{Accuracy of various trained classifers}
 \label{tab:my-table1}
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|c|}
+\begin{tabular}{|l|l|l|}
 \hline
-Classifier            & Accuracy \\ \hline
-SVM                   & 99.04\%  \\ \hline
-KNN                   & 98.39\%  \\ \hline
-Naïve Bayes           & 98.39\%  \\ \hline
-Discriminant Analysis & 99.22\%  \\ \hline
+Pre-Trained Model & \multicolumn{1}{c|}{Classifier}            & \multicolumn{1}{c|}{Accuracy} \\ \hline
+AlexNet           & \multicolumn{1}{c|}{SVM}                   & \multicolumn{1}{c|}{99.04\%}  \\ \hline
+AlexNet           & \multicolumn{1}{c|}{KNN}                   & \multicolumn{1}{c|}{98.39\%}  \\ \hline
+AlexNet           & \multicolumn{1}{c|}{Naïve Bayes}           & \multicolumn{1}{c|}{98.39\%}  \\ \hline
+AlexNet           & \multicolumn{1}{c|}{Discriminant Analysis} & \multicolumn{1}{c|}{99.22\%}  \\ \hline
+ResNet18          & SVM                                        & 99.83\%                       \\ \hline
+ResNet18          & KNN                                        & 99.57\%                       \\ \hline
+ResNet18          & Naïve Bayes                                & 99.00\%                       \\ \hline
+ResNet18          & Discriminant Analysis                      & 99.83\%                       \\ \hline
+ResNet50          & SVM                                        & 99.96\%                       \\ \hline
+ResNet50          & KNN                                        & 99.76\%                       \\ \hline
+ResNet50          & Naïve Bayes                                & 99.26\%                       \\ \hline
+ResNet50          & Discriminant Analysis                      & 99.87\%                       \\ \hline
 \end{tabular}%
+}
+\end{table}
 }
 \end{table}
 
