--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -5,7 +5,7 @@
 \section{Experiments and Results}
 % TODO
 \subsection{Feature Extraction from Pretrained AlexNet}
-Table 1 describes the performance of various classifers that were trained based on the features extracted from the last fully connected layer (FC8) of the AlexNet. Image Augmnetation techniques such as translation and rotation seemed to be having a negative impact on the perfromance of these classifers and hence were not included in the results.
+Table 1 describes the performance of various classifers that were trained based on the features extracted from the last fully connected layer (FC8) of the AlexNet and the last pooling layers of ResNet18 and ResNet50. Image Augmnetation techniques such as translation and rotation seemed to be having a negative impact on the perfromance of these classifers and hence were not included in the results.
 
 \begin{table}[]
 \centering
