--- a/doc/sections/result.tex
+++ b/doc/sections/result.tex
@@ -33,7 +33,7 @@ ResNet50          & Discriminant Analysis                      & 99.87\%        
 }
 \end{table}
 
-\subsection{Transfer Learning using AlexNet}
+\subsection{Retraining the pretrained AlexNet}
 The transfer learning model was trained over the training image datset using MATLAB 2018b on a Windows 10 Operating System on a single core i3 CPU with 8GB of RAM. While the initial results from the trained classier were promising, by means of training data augmentation and optimization of the training parameters we are able to acheive a very accurate classifier while also reducing the training time by half. Table 2 depicts the effect of training parameters on the classifeir performance. The choice of the optimization parameters and their corresponding effects have been described briefly in the follwoing sub-sections.
 
 \begin{table}[h]
