--- a/doc/sections/literature.tex
+++ b/doc/sections/literature.tex
@@ -20,16 +20,12 @@ conjuction with ReLU that proved to be very effective.
 A brief descriotion of the fuctions of various AlexNet layers is provided below:
 
 \begin{itemize}
-	\item Convolutional Layer puts the images from the previous layer through a set of convolutional
-filters which extract a particular feature;
-	\item ReLU Layer maps negative values to zero which allows faster training while maintaining
-the positive ones;
+	\item Convolutional Layer puts the images from the previous layer through a set of convolutional filters which extract a particular feature;
+	\item ReLU Layer maps negative values to zero which allows faster training while maintaining the positive ones;
 	\item Pooling Layer performs downsampling, consequently, reduces the number of CNN parameters;
-    \item Batch Normalization Layer speeds up training by normalizing each of the minibatches;
-    \item Dropout Layer randomly sets the input elements to zero with a given probability
-and hence protects the network from overfitting;
-    \item Fully Connected Layer identifies the larger patterns by combining all the features
-learned from the previous layers.
+    	\item Batch Normalization Layer speeds up training by normalizing each of the minibatches;
+    	\item Dropout Layer randomly sets the input elements to zero with a given probability and hence protects the network from overfitting;
+    	\item Fully Connected Layer identifies the larger patterns by combining all the features learned from the previous layers.
 \end{itemize}
 
 \subsubsection{ResNet}
