--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -35,6 +35,14 @@
   year={2012}
 }
 
+@inproceedings{Res,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+
 @article{Ekat,
   title={Saimaa ringed seal fur pattern extraction for identification purposes},
   author={Nepovinnykh, Ekaterina and others},
