--- a/doc/sections/literature.tex
+++ b/doc/sections/literature.tex
@@ -29,7 +29,7 @@ A brief descriotion of the fuctions of various AlexNet layers is provided below:
 \end{itemize}
 
 \subsubsection{ResNet}
-A residual neural network (ResNet) is an artificial neural network (ANN) of a kind that builds on constructs known from pyramidal cells in the cerebral cortex. They are typically built to overcome the vanishing gradient problem of deep networks wherin the gradient becomes infinitively small due to repeated backpropogations which typically leads to degradation of the perfromance of the network. ResNet utilizes identity shortcut connection that skips one or more layers, or shortcuts to jump over some layers. Typical ResNet models are implemented with double- or triple- layer skips that contain nonlinearities (ReLU) and batch normalization in between
+A residual neural network (ResNet) is an artificial neural network (ANN) of a kind that builds on constructs known from pyramidal cells in the cerebral cortex \cite{Res}. They are typically built to overcome the vanishing gradient problem of deep networks wherin the gradient becomes infinitively small due to repeated backpropogations which typically leads to degradation of the perfromance of the network. ResNet utilizes identity shortcut connection that skips one or more layers, or shortcuts to jump over some layers. Typical ResNet models are implemented with double- or triple- layer skips that contain nonlinearities (ReLU) and batch normalization in between
 
 \subsubsection{Transfer Learning}
 Until the inception of transfer learning, conventional machine learning
