--- a/doc/sections/discussion.tex
+++ b/doc/sections/discussion.tex
@@ -1,5 +1,8 @@
 \documentclass[doc/report.tex]{subfiles}
 
+% Discuss the results, try to explain what has worked and why. What could be
+% improved?
+
 \begin{document}
 
 \section{Discussion}
